# grust-proof

./: .travis.yml  Cargo.toml  README.md
fake-gen/gio/: Cargo.toml  gio.rs
fake-gen/gio/sys/: Cargo.toml  build.rs
fake-gen/gio/sys/src/: lib.rs
fake-gen/glib/: Cargo.toml  glib.rs
fake-gen/gobject/: Cargo.toml  gobject.rs
src/: giotest.rs  main.rs  test_gio.rs  typetest.rs
