[package]

name = "grust-Gio-2_0"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
license = "LGPL-2.1+"

[lib]
name = "grust_gio_2_0"
path = "gio.rs"

[dependencies]
bitflags = "0.3"
glib-2_0-sys = "0.1.0"
gobject-2_0-sys = "0.1.0"

[dependencies.grust]
git = "https://github.com/gi-rust/grust.git"

[dependencies.grust-GLib-2_0]
path = "../glib"

[dependencies.grust-GObject-2_0]
path = "../gobject"

[dependencies.gio-2_0-sys]
path = "sys"
