[package]
name = "grust-gio-2-0"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"

[lib]
name = "grust_gio_2_0"
path = "gio.rs"

[dependencies]
bitflags = "0.3"

[dependencies.glib-2-0-sys]
git = "https://github.com/gi-rust/glib-sys.git"

[dependencies.gobject-2-0-sys]
git = "https://github.com/gi-rust/gobject-sys.git"

[dependencies.gio-2-0-sys]
git = "https://github.com/gi-rust/gio-sys.git"

[dependencies.grust]
git = "https://github.com/gi-rust/grust.git"

[dependencies.grust-glib-2-0]
path = "../glib"

[dependencies.grust-gobject-2-0]
path = "../gobject"
