[package]

name = "grust-glib-2-0"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"

[lib]
name = "grust_glib_2_0"
path = "glib.rs"

[dependencies.glib-2-0-sys]
git = "https://github.com/gi-rust/glib-sys.git"

[dependencies.grust]
git = "https://github.com/gi-rust/grust.git"
