[package]

name = "grust-GObject-2_0"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"

[lib]
name = "grust_gobject_2_0"
path = "gobject.rs"

[dependencies]
gobject-2_0-sys = "0.2"

[dependencies.grust]
git = "https://github.com/gi-rust/grust.git"

[dependencies.grust-GLib-2_0]
path = "../glib"
