[package]

name = "grust-gobject-2-0"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"

[lib]
name = "grust_gobject_2_0"
path = "gobject.rs"

[dependencies.gobject-2-0-sys]
git = "https://github.com/gi-rust/gobject-sys.git"

[dependencies.grust]
git = "https://github.com/gi-rust/grust.git"

[dependencies.grust-glib-2-0]
path = "../glib"
