[package]

name = "gio-2_0-sys"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
license = "LGPL-2.1+"

links = "gio-2.0"

build = "build.rs"

[build-dependencies]
pkg-config = "0.1.6"

[dependencies.glib-2_0-sys]
git = "https://github.com/gi-rust/glib-sys.git"

[dependencies.gobject-2_0-sys]
git = "https://github.com/gi-rust/gobject-sys.git"
