[package]

name = "gio-2-0-sys"
version = "0.0.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"

links = "gio-2.0"

build = "build.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
gtypes = "0.1"

[dependencies.glib-2-0-sys]
git = "https://github.com/gi-rust/glib-sys.git"

[dependencies.gobject-2-0-sys]
git = "https://github.com/gi-rust/gobject-sys.git"
